--- a/src/WebAPI/appsettings.json
+++ b/src/WebAPI/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "UseInMemoryDatabase": false,
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=94.73.148.157;Database=u8820550_ply_api;Uid=u8820550_playapi;Pwd=RTlz15X4JGky60X;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
